UI: add FPV crosshairs; set default light pink/orange sunset; neutral fog to avoid building tint; align sidebar sky default

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <aside id="sidebar" class="sidebar">
       <div class="row">
         <label>Sky</label>
-        <input id="uiSky" type="color" value="#0b1020" />
+        <input id="uiSky" type="color" value="#ffc6a8" />
       </div>
       <div class="row">
         <label>City ⇄ Nature</label>
